# clover-cl

./: .gitignore  LICENSE  README.md  pyproject.toml
clover/: __init__.py
clover/cli/: __init__.py  __main__.py
clover/core/: README.md  __init__.py  benchmark.py  data_manager.py  experience.py  image_assigner.py  overlap_spec.py  stream.py  stream_builder.py  stream_spec.py  task_builder.py
clover/datasets/: __init__.py  base.py  cifar100.py  cub200.py  imagenet_a.py  imagenet_r.py  omnibench.py  vtab.py
clover/scenarios/: README.md  __init__.py  cumulative_drift.py  distribution_shift.py  exact_replay.py  hierarchical.py  long_range_revisit.py  mid_range_revisit.py  near_miss.py  partial_overlap.py  symmetric_pair.py
clover/utils/: __init__.py  manifest.py  seeding.py  visualizer.py
configs/: cifar100_baseline.yaml  cifar100_exact_replay.yaml  cifar100_partial.yaml  cub200_baseline.yaml  cub200_hierarchical.yaml  imagenet_r_distribution_shift.yaml
configs/stream/: cifar100_partial.yaml  cifar100_revisit_random.yaml  cub200_hierarchical_revisit.yaml
docs/: CONCEPTS.md  MIGRATION.md
scripts/: capture_pilot_fixtures.py
tests/: conftest.py  test_back_compat.py  test_benchmark.py  test_cli.py  test_data_manager_baseline.py  test_data_manager_extra.py  test_data_manager_overlap.py  test_datasets.py  test_echo_classes.py  test_experience.py  test_image_assigner.py  test_integration_metrics.py  test_manifest.py  test_overlap_spec.py  test_reproducibility.py  test_scenarios.py  test_stream.py  test_stream_builder.py  test_task_builder.py  test_visualizer.py
(+1 files in other folders)
